Regression (r55107) - WebInspector docking is busted. https://bugs.webkit.org/show_bug.cgi?id=35274

Reviewed by Tim Hatcher and Pavel Feldman.

WebCore:

* inspector/InspectorController.cpp:
(WebCore::InspectorController::canAttachWindow): Use the minimum height for this calculation,
  not the preferred height.
(WebCore::InspectorController::attachWindow): attachWindow() shouldn't decide the policy, as it is
  often called partway through the show or dock procedure after some of the initial conditions have
  changed. Let the front-end itself and the InspectorClient's make the policy decision at the start
  of the show/dock operation.

* inspector/InspectorFrontendHost.cpp:
(WebCore::InspectorFrontendHost::canAttachWindow):
* inspector/InspectorFrontendHost.h:
* inspector/InspectorFrontendHost.idl:

* inspector/front-end/inspector.js:
(WebInspector.toggleAttach): Before attaching, ask the front-end-host if attaching is allowed.

WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm:
(-[WebInspectorWindowController showWindow:]): Swap the order of the "should attach?" check
  to get the expected behavior.

WebKit/win:

* WebCoreSupport/WebInspectorClient.cpp:
(WebInspectorClient::showWindowWithoutNotifications): Swap the order of the "should attach?" check
  to get the expected behavior.

LayoutTests:

* inspector/timeline-event-dispatch.html: Actually click in the right place now that the
  inspector isn't docked anymore.



Canonical link: https://commits.webkit.org/46474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55172 268f45cc-cd09-0410-ab3c-d52691b4dbfc