WebCore/inspector/InspectorFrontendHost.cpp
@@ -96,6 +96,13 @@ void InspectorFrontendHost::windowUnloading()
         m_inspectorController->close();
 }
 
+bool InspectorFrontendHost::canAttachWindow() const
+{
+    if (m_inspectorController)
+        return m_inspectorController->canAttachWindow();
+    return false;
+}
+
 void InspectorFrontendHost::setAttachedWindowHeight(unsigned height)
 {
     if (m_inspectorController)
